fixed calendar css bug of overlapping

--- a/calendar/css/calendar.css
+++ b/calendar/css/calendar.css
@@ -84,6 +84,7 @@ a {
     font: 16px arial;
     word-wrap: break-word;
     margin-left: 25px;
+    margin-top:30px;
 	margin-bottom: 10px;
 }
 
